test/Fail/Issue461.agda

module Issue461 where

data D : Set where
data D : Set where
