test/Fail/Issue461.err
Issue461.agda:5.6-13: error: [ClashingDefinition]
Multiple definitions of D. Previous definition
D is in scope as
  * a data type Issue461.D brought into scope by
    - its definition at Issue461.agda:4.6-7
when scope checking the declaration
  data D : Set
